--- a/index-fds.html
+++ b/index-fds.html
@@ -35,7 +35,7 @@
           <ul class="reset-list">
             <li><a href="./views/login-fds.html">로그인</a></li>
             <li><a href="./views/signup-fds.html">회원 가입</a></li>
-            <li><a href="./views/ui-design.html">이디야 디자인</a></li>
+            <li><a href="./views/ui-design-fds.html">이디야 디자인</a></li>
             <li><a href="./views/beverage-fds.html">이디야 음료</a></li>
             <li><a href="./views/news-fds.html">이디야 뉴스</a></li>
             <li><a href="./views/store-fds.html">매장 찾기</a></li>
@@ -51,7 +51,7 @@
       <div class="ediya-recommend-container">
         <section class="ediya-recommend">
           <h2 class="a11y-hidden">이디야 커피의 다양한 메뉴</h2>
-          <p class="ediya-recommend-text" lang="en">ALWAYS BESIDE YOU<em class="">EDIYA COFFEE</em></p>
+          <p class="ediya-recommend-text" lang="en">ALWAYS BESIDE YOU<em class="theme-blue">EDIYA COFFEE</em></p>
           <p class="ediya-recommend-text">늘 당신 곁에, 이디야 커피의 다양한 메뉴를 맛보세요.</p>
           <ul class="ediya-recommend-list reset-list">
             <li class="ediya-recommend-beverage">
