언론속 이디야 일부 디자인

--- a/html/news-fds.html
+++ b/html/news-fds.html
@@ -48,10 +48,10 @@
         </nav>
       </header>
     </div>
-    <main class="app-main">
+    <main class="app-main news-main">
       <section class="news__notice">
-        <h2 class="news-headline" id="ediyaNewsSection01">공지사항</h2>
-        <p class="news-text">공지사항 내역 입니다.</p>
+        <h2 class="news-headline" id="ediyaNewsSection01">언론 속 이디야</h2>
+        <p class="news-text">이디야의 소식을 전해드립니다.</p>
         <form class="news__press-form" action="#" method="GET">
           <fieldset>
             <legend>언론 속 이디야 검색</legend>
